@@ -53,17 +53,19 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 629)
-(Parent-Version lpmud 3-3 628)
+(Project-Version lpmud 3-3 630)
+(Parent-Version lpmud 3-3 629)
 (Version-Log "
-  - (gcollect.c) Closures found to be bound to destructed objects are
-       replaced by 0s, not #'undef closures (Bug #0000322).
-  - (closure) The function store_undef_closure() is no longer needed.
+  - (xalloc) Added a new function prexalloc() to re-allocate permanent
+       memory.
+  - (pkg-tls.c) The allocator for the TLS package of course needs to
+       allocate permanent memory so that the GC won't deallocate
+       the library's memory (Bug #0000323).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Sat, 11 Dec 2004 21:47:12 -0700")
+(Checkin-Time "Fri, 17 Dec 2004 23:13:52 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -101,7 +103,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.692 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.693 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -319,7 +321,7 @@
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.3 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.2 644))
   (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.6 644))
-  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.12 644))
+  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.13 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.20 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.5 644))
@@ -354,8 +356,8 @@
   (src/typedefs.h (lpmud/d/50_typedefs.h 1.12.1.7 644))
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7.1.3 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.14.1.5 644))
-  (src/xalloc.h (lpmud/g/51_xalloc.h 1.24 644))
-  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.43 644))
+  (src/xalloc.h (lpmud/g/51_xalloc.h 1.25 644))
+  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.44 644))
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.5 644))
 
   ;; Build files
@@ -1276,7 +1278,7 @@
   (doc/LPC/functions (lpmud/r/28_functions 1.10 644))
   (doc/LPC/if (lpmud/h/15_if 1.3 644))
   (doc/LPC/inherit (lpmud/r/29_inherit 1.2 644))
-  (doc/LPC/initialisation (lpmud/c/49_initialisa 1.4 644))
+  (doc/LPC/initialisation (lpmud/c/49_initialisa 1.5 644))
   (doc/LPC/inline-closures (lpmud/b/b/30_inline-clo 1.7 644))
   (doc/LPC/lfuns (lpmud/r/31_lfuns 1.3 644))
   (doc/LPC/lpc (lpmud/r/32_lpc 1.2 644))
